# apps/api/internal/entities/users.entity.go
@@ -2,10 +2,10 @@ package entities
 
 type User struct {
 	Model       `swag:"-"`
-	Username    string `json:"username" gorm:"unique;not null" validate:"required,min=3,max=30"`
-	Email       string `json:"email" gorm:"unique;not null" validate:"required,email"`
-	Avatar      string `json:"avatar" validate:"omitempty"`
-	Bio         string `validate:"max=250"`
-	Active      bool
-	SubDragonId int32 `json:"subDragonId"`
+	Username    string `json:"username" gorm:"unique;not null"`
+	Email       string `json:"email" gorm:"unique;not null"`
+	Avatar      string `json:"avatar"`
+	Bio         string `json:"bio"`
+	Active      bool   `json:"active"`
+	SubDragonId int32  `json:"subDragonId"`
 }
