# apps/api/internal/pkg/swagger/swagger.json
@@ -105,6 +105,49 @@
                 }
             }
         },
+        "/v1/users/{id}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body for updating user",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/users.UpdateUserSchema"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.CommonErrorSchema"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users/{userId}": {
             "get": {
                 "consumes": [
@@ -211,9 +254,7 @@
         "entities.User": {
             "type": "object",
             "required": [
-                "email",
-                "id",
-                "username"
+                "id"
             ],
             "properties": {
                 "active": {
@@ -223,8 +264,7 @@
                     "type": "string"
                 },
                 "bio": {
-                    "type": "string",
-                    "maxLength": 250
+                    "type": "string"
                 },
                 "createdAt": {
                     "type": "string"
@@ -245,9 +285,7 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string",
-                    "maxLength": 30,
-                    "minLength": 3
+                    "type": "string"
                 }
             }
         },
@@ -260,6 +298,28 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
+                }
+            }
+        },
+        "users.UpdateUserSchema": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "bio": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "subDragonId": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 3
                 }
             }
         },
@@ -279,6 +339,10 @@
         },
         "users.UserSchema": {
             "type": "object",
+            "required": [
+                "email",
+                "username"
+            ],
             "properties": {
                 "avatar": {
                     "type": "string"
@@ -293,7 +357,9 @@
                     "type": "integer"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 3
                 }
             }
         }
