# apps/api/internal/routes/users/controller.go
@@ -4,6 +4,7 @@ import (
 	"dragon-threads/apps/api/internal/entities"
 	"dragon-threads/apps/api/internal/pkg/common"
 	"dragon-threads/apps/api/internal/repositories/usersRepository"
+	"fmt"
 
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
@@ -109,6 +110,47 @@ func createUser(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(user)
 }
 
+// @Summary      Update User
+// @Tags         User
+// @Accept       json
+// @Param id path string true "User ID"
+// @Param request body users.UpdateUserSchema true "Request body for updating user"
+// @Success      200  {object} entities.User
+// @Failure      400  {object} common.CommonErrorSchema
+// @Router       /v1/users/{id} [put]
+func updateUser(c *fiber.Ctx) error {
+	// Retrieve the user ID from the request path
+	userID := c.Params("userId")
+
+	// Retrieve the updated user data from the request body
+	var updatedUser UpdateUserSchema
+	if err := c.BodyParser(&updatedUser); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(common.FormatError(err.Error()))
+	}
+
+	// Validate the updated user data
+	validate := validator.New()
+	if err := validate.Struct(updatedUser); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(common.FormatError(err.Error()))
+	}
+
+	// Check if the user with the given ID exists
+	existingUser, err := usersRepository.GetUser("id =?", userID)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(common.FormatError(err.Error()))
+	}
+	// Update the user data
+	updateUserFields(existingUser, updatedUser)
+	fmt.Println(existingUser)
+	// Save the updated user data
+	newUser, err := usersRepository.UpdateUser(existingUser)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(common.FormatError(err.Error()))
+	}
+
+	return c.Status(fiber.StatusOK).JSON(newUser)
+}
+
 // @Summary Delete user by ID
 // @Tags User
 // @Accept json
@@ -128,6 +170,7 @@ func deleteUserById(c *fiber.Ctx) error {
 	if err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(common.FormatError(USER_NOT_FOUND))
 	}
+
 	_, err = usersRepository.DeleteUser(user)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(common.FormatError(err.Error()))
